# Robotics-project

er-ccapi-python/: README.md  mkdocs.yml  myexample.py  pyproject.toml  setup.py
er-ccapi-python/c++ projects/: hello.cpp
er-ccapi-python/docs/: examples.md  index.md  robot.md
er-ccapi-python/er_ccapi_python.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
er-ccapi-python/er_ccapi_python/classes/: __init__.py  robot.py  site.py
er-ccapi-python/er_ccapi_python/client/: auth_service.py  gql_client.py  query_helper.py  schema.graphql
er-ccapi-python/er_ccapi_python/models/: enums.py
er-ccapi-python/examples/: day1.py  day2.py  robot_example.py  site_example.py
er-ccapi-python/my_practice_python/: day1orig.py
